--- a/templates/app1/bank_recon.html
+++ b/templates/app1/bank_recon.html
@@ -150,7 +150,7 @@
         <a href="{% url 'delete_recon' bnk_det.accounts1id%}" class="btn btn-danger ml-2 mt-1" onclick="alert('Are you sure you want to delete?')">Delete Reconcile</a>
         
 
-        <span class="mr-0"> Balance:<span style="color:#673ab7" class="ml-1">₹{{clos_bal}}</span>Difference Balance:<span style="color:red" class="ml-1">₹{{differ}}</span></span>
+        <span style="margin-left: 20%;"> Balance:</span><span style="color:#f02769" class="ml-1"> &nbsp;₹{{clos_bal}}&nbsp;</span>Difference Balance:<span style="color:red" class="ml-1">&nbsp;₹{{differ}}</span></span>
         
         <a class="close" data-dismiss="modal">×</a>
     
