--- a/templates/app1/estimate2.html
+++ b/templates/app1/estimate2.html
@@ -1648,7 +1648,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                         <div class="col-md-4 mt-3">
                             <label for="validationCustom03">Company</label>
                             <input type="text" class="form-control" id="validationCustom03" name="company"
-                                   required style="background-color: #2f516f;color: white;">
+                                    style="background-color: #2f516f;color: white;">
                             <div class="valid-feedback">Looks good!</div>
                         </div>
                         <div class="col-md-4 mt-3">
