--- a/templates/app1/addinvoics.html
+++ b/templates/app1/addinvoics.html
@@ -1755,7 +1755,7 @@ alert(col1);
                         <div class="col-md-4 mt-3">
                             <label for="validationCustom03">Company</label>
                             <input type="text" class="form-control" id="validationCustom03" name="company"
-                                   required style="background-color: #2f516f;color: white;">
+                                    style="background-color: #2f516f;color: white;">
                             <div class="valid-feedback">Looks good!</div>
                         </div>
                         <div class="col-md-4 mt-3">
