--- a/templates/app1/editinvoice.html
+++ b/templates/app1/editinvoice.html
@@ -1654,13 +1654,13 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                         <div class="col-md-4 mt-3">
                             <label for="validationCustom03">Company</label>
                             <input type="text" class="form-control" id="validationCustom03" name="company"
-                                   required style="background-color: #2f516f;color: white;">
+                                    style="background-color: #2f516f;color: white;">
                             <div class="valid-feedback">Looks good!</div>
                         </div>
                         <div class="col-md-4 mt-3">
                             <label for="validationCustom03">Location</label>
                             <input type="text" class="form-control" id="validationCustom03" name="location"
-                                   required style="background-color: #2f516f;color: white;">
+                                   style="background-color: #2f516f;color: white;">
                             <div class="valid-feedback">Looks good!</div>
                         </div>
                         <div class="col-md-4 mt-3"></div>
@@ -1727,7 +1727,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                         <div class="col-md-4 mt-3">
                             <label for="validationCustom03">PAN NO</label>
                             <input type="text" class="form-control" id="validationCustom03" name="panno"
-                                   required style="background-color: #2f516f;color: white;"
+                                    style="background-color: #2f516f;color: white;"
                                    onchange="checkpan(this)" placeholder="APPCK7465F">
                             <div class="text-danger m-2" id="warnpan"></div>
                         </div>
@@ -1773,7 +1773,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                         <div class="col-md-4 mt-3">
                             <label for="validationCustom03">Email</label>
                             <input type="email" class="form-control" id="validationCustom03" name="email"
-                                   required style="background-color: #2f516f;color: white;"
+                                   style="background-color: #2f516f;color: white;"
                                    placeholder="finsys@mail.com">
                             <div class="invalid-feedback">Please provide a valid Email</div>
                         </div>
@@ -1788,7 +1788,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                             <label for="validationCustom01">Mobile</label>
                             <input type="text" class="form-control" id="validationCustom01"
                                    onchange="checkphone(this)" name="mobile"
-                                   required style="background-color: #2f516f;color: white;">
+                                    style="background-color: #2f516f;color: white;">
                             <div class="text-danger m-2" id="warnphone"></div>
                         </div>
                     </div>
@@ -1805,7 +1805,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                                     <div class="form-row">
                                         <label for="street">Street</label>
                                         <textarea class="form-control street" id="street" name="street"
-                                                  required
+                                                  
                                                   style="background-color: #2f516f;color: white;"></textarea>
                                         <div class="invalid-feedback">Please provide a valid Street</div>
                                     </div>
@@ -1817,7 +1817,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                                         <label for="city">City</label>
                                         <input type="text" class="form-control" id="city"
                                                name="city"
-                                               required
+                                               
                                                style="background-color: #2f516f;color: white;" placeholder="City">
                                         <div class="invalid-feedback">Please provide a valid City</div>
                                     </div>
@@ -1878,7 +1878,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                                         <label for="pinco">Pin Code</label>
                                         <input type="text" class="form-control" id="pinco"
                                                name="pincode"
-                                               required style="background-color: #2f516f;color: white;"
+                                                style="background-color: #2f516f;color: white;"
                                                placeholder="PIN code">
                                         <div class="invalid-feedback">Please provide a valid Pin Code</div>
                                     </div>
@@ -1888,7 +1888,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                                         <label for="country">Country</label>
                                         <input type="text" class="form-control" id="country"
                                                name="country"
-                                               required style="background-color: #2f516f;color: white;"
+                                               style="background-color: #2f516f;color: white;"
                                                placeholder="Country">
                                         <div class="invalid-feedback">Please provide a valid Country</div>
                                     </div>
@@ -1910,7 +1910,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                                         <label for="shipstreet">Street</label>
                                         <textarea class="form-control" id="shipstreet"
                                                   name="shipstreet"
-                                                  required
+                                                  
                                                   style="background-color: #2f516f;color: white;"></textarea>
                                         <div class="invalid-feedback">Please provide a valid Street</div>
                                     </div>
@@ -1922,7 +1922,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                                         <label for="shipcity">City</label>
                                         <input type="text" class="form-control" id="shipcity"
                                                name="shipcity"
-                                               required
+                                               
                                                style="background-color: #2f516f;color: white;" placeholder="City">
                                         <div class="invalid-feedback">Please provide a valid City</div>
                                     </div>
@@ -1983,7 +1983,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                                         <label for="shippinco">Pin Code</label>
                                         <input type="text" class="form-control" id="shippinco"
                                                name="shippincode"
-                                               required style="background-color: #2f516f;color: white;"
+                                                style="background-color: #2f516f;color: white;"
                                                placeholder="PIN code">
                                         <div class="invalid-feedback">Please provide a valid Pin Code</div>
                                     </div>
@@ -1993,7 +1993,7 @@ $('#baldue').val(parseFloat(x .toFixed(2)));
                                         <label for="shipcountry">Country</label>
                                         <input type="text" class="form-control" id="shipcountry"
                                                name="shipcountry"
-                                               required style="background-color: #2f516f;color: white;"
+                                               style="background-color: #2f516f;color: white;"
                                                placeholder="Country">
                                         <div class="invalid-feedback">Please provide a valid Country</div>
                                     </div>
